# ai-project-mail-streamlit

./: .gitignore  01_exploration.ipynb  Aktueller_Stand.md  CHEATSHEET.md  CODEX_PROJEKTUEBERGABE_STAGE3.md  README.md  data_cleaning.md  macro_index.csv  main.py  model_results.md  model_results_stage2.md  model_results_stage3.md  project_proposal_v2.md  project_theme.md  pyproject.toml  requirements.txt  team_mail_presentation.pptx
app/: streamlit_app.py
docs/: feature_engineering.md  project_proposal_v2.md  session_2026-06-04.md  session_2026-06-09.md
model_comparison/: model_comparison.json  model_comparison.md
models/: price_model.joblib  price_model_metrics.json  seasonality_factors.csv  stage1_encoder.pkl  stage1_xgboost.json  stage2_evaluation.json  stage3_evaluation.json
notebooks/: AIML.ipynb
outputs/: sprechtext_stage2_stage3.md  sprechtext_stage2_stage3_repo_aktualisiert.md  zwischenpraesentation_stage2_stage3.pptx  zwischenpraesentation_stage2_stage3.pptx.inspect.ndjson  zwischenpraesentation_stage2_stage3_repo_aktualisiert.pptx  zwischenpraesentation_stage2_stage3_repo_aktualisiert.pptx.inspect.ndjson
scripts/: build_features.py  clean_car_prices.py  compare_models.py  enrich_macro.py  evaluate_segments.py  evaluate_stage2.py  evaluate_stage3.py  stage2_macro.py  stage3_seasonality.py  train_price_model.py  train_stage1.py
